[gd_scene load_steps=3 format=2]

[ext_resource path="res://people_respawn/people_respawn.gd" type="Script" id=1]
[ext_resource path="res://person/person.tscn" type="PackedScene" id=2]

[node name="people_respawn" type="Node2D"]
script = ExtResource( 1 )
person_template = ExtResource( 2 )

[node name="left_respawn_point" type="Position2D" parent="."]
position = Vector2( -50, 600 )

[node name="right_respawn_point" type="Position2D" parent="."]
position = Vector2( 1074, 600 )

[node name="respawn_timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="respawn_timer" to="." method="_on_respawn_timer_timeout"]
